Modifiche richieste da Mario

--- a/app/config.json
+++ b/app/config.json
@@ -9,6 +9,6 @@
   "os:mobileweb": {},
   "dependencies": {
     "checkbox": "1.0",
-    "nl.fokkezb.loading": "*"
+    "nl.fokkezb.loading": "1.8.3"
   }
 }
