--- a/app/config.json
+++ b/app/config.json
@@ -9,6 +9,7 @@
   "os:mobileweb": {},
   "dependencies": {
     "checkbox": "1.0",
-    "nl.fokkezb.loading": "1.8.3"
+    "nl.fokkezb.loading": "1.8.3",
+    "nl.fokkezb.pullToRefresh": "2.1.0"
   }
 }
